css/styles.css
*,
*::after,
*::before {
  box-sizing: border-box;
}

/*CUSTOM PROPS*/
/*-----------*/
:root {
  --color-intro: #3eb595;
  --color-primary: #1a1a1a;
  --color-secondary: #696969;
  --color-tertiary: #c9c9c9;
  --color-accent: #fff300;
  --color-accent-alt: #ffb700;
  --color-body: #fff;
}

/*TYPOGRAPHY*/
/*----------*/
html {
  font-size: 62.5%;
}

body {
  font-family: "Open Sans", sans-serif;
  font-size: 1.8rem;
  background: #000;
  color: var(--color-body);
  line-height: 1.5;
}

h3 {
  margin: 0;
  color: var(--color-secondary);
}

p {
  margin: 0;
}

/*BUTTON*/
/*------*/

.btn {
  border-radius: 40px;
  border: 0;
  cursor: pointer;
  font-size: 2rem;
  font-weight: 600;
  padding: 2rem 3rem;
  margin: 1rem 0;
  text-decoration: none;
  text-align: center;
  text-transform: uppercase;
  white-space: nowrap;
}

.btn--download {
  background: var(--color-accent);
  color: var(--color-secondary);
}

.btn--download:hover {
  color: var(--color-body);
  background: var(--color-secondary);
  transition: 0.25s;
}

/*LINKS*/
/*-----*/
.link {
  text-decoration: none;
  color: var(--color-body);
  font-weight: 500;
}

.red {
  color: #d22630;
}

.yellow {
  color: var(--color-accent);
}

.yellow:hover,
.red:hover {
  color: #0036f9;
  text-decoration: underline;
  transition: 0.2s;
}

.back--link {
  margin: 0.2rem 0 0.2rem 0;
}

/*INTRO SECTION*/
/*------------*/
#intro {
  display: flex;
  height: 100vh;
  background-color: var(--color-intro);
}

.intro--title {
  font-size: 5rem;
  font-weight: 800;
  margin: 0;
  padding: 0 3rem;
  justify-self: center;
  align-self: center;
}

@media screen and (min-width: 700px) {
  .intro--title {
    padding: 0;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
  }
}

/*PORTALS*/
/*-------*/
.portal {
  background: var(--color-secondary);
  margin: 8rem auto;
  height: 300px;
  width: 300px;
  border-radius: 30px;
  justify-content: center;
  align-items: center;
}

.portal--header {
  color: var(--color-tertiary);
  font-weight: 800;
  font-size: 2.8rem;
  padding-top: 3rem;
  text-align: center;
}

.portal--description {
  font-weight: 400;
  padding: 2rem 2.5rem;
}

.portal--arrow {
  transform: rotate(-90deg);
}

.portal--arrow:hover {
  transform: rotate(-90deg) translateY(5px);
  transition: all 0.5s;
}

/*BLOG/GRID COMPONENTS*/
/*-------------------*/
.back--arrow {
  margin: 4rem 0.5rem 4rem 4rem;
  transform: rotate(90deg);
}

.back--arrow:hover {
  transform: rotate(90deg) translateY(5px);
  transition: all 0.5s;
}

.blog--title {
  margin: 0 2rem;
}

.center__title {
  text-align: center;
}

.blog--text {
  margin: 2rem 2rem;
}

.small {
  font-weight: 100;
  text-transform: uppercase;
}

.emphasize-text {
  font-weight: 800;
  font-size: 2rem;
}

.grid {
  display: grid;
}

.blog__grid-container {
  grid-template-areas:
    "header header header header header header"
    "main main main main sidebar sidebar"
    "footer footer footer footer footer footer";
  grid-template-columns: repeat(6, 1fr);
  height: 100vh;
}

.blog__header {
  grid-area: header;
}

.blog__main {
  grid-area: main;
  overflow-y: visible;
}
.blog__sidebar {
  grid-area: sidebar;
  overflow-y: visible;
}

.sidebar-portal {
  border-radius: 5px;
  height: auto;
  width: 200px;
}

.blog__footer {
  grid-area: footer;
  height: 5vh;
}

@media screen and (max-width: 850px) {
  .blog__grid-container {
    grid-template-areas:
      "header"
      "sidebar"
      "main"
      "footer";
    grid-template-columns: 1fr;
  }
  .blog__main {
    overflow-y: visible;
  }
  .blog__sidebar {
    overflow-y: visible;
  }
}

@media screen and (min-width: 1024px) {
  .grid--1by2 {
    grid-template-columns: repeat(2, 1fr);
  }
  .grid--1by3 {
    grid-template-columns: repeat(3, 1fr);
  }
}

/*OVERVIEW*/
/*--------*/
.overview {
  background: var(--color-accent-alt);
}

.overview h3 {
  color: var(--color-body);
}

.overview .portal--header {
  padding: 0;
}

/*EDUCATION*/
/*---------*/
.key-courses {
  background: var(--color-accent-alt);
  width: 250px;
}

.key-courses .portal--header {
  padding: 0;
}

.key-courses h3 {
  color: var(--color-body);
  display: inline;
}

.key-courses ul {
  color: var(--color-body);
  list-style: square;
  padding: 1.5rem;
  margin: 0;
}

.education {
  height: auto;
  width: auto;
  border-radius: 5px;
  margin: 2rem 6rem;
}

.education h3 {
  font-size: 3rem;
}

.njit,
.rvcc1 {
  background: var(--color-tertiary);
}

.njit h3,
.rvcc1 h3 {
  color: var(--color-primary);
}

.njit p,
.rvcc1 p {
  color: var(--color-secondary);
}

.rvcc2,
.fit {
  background: var(--color-secondary);
}

.rvcc2 h3,
.fit h3 {
  color: var(--color-tertiary);
}

/*WORK*/
/*----*/
.work {
  width: 300px;
}

.work .portal--header {
  padding: 0;
}

.work h3 {
  color: var(--color-body);
  display: inline;
  margin: 0;
  padding: 0;
}

.work ul {
  color: var(--color-body);
  list-style: square;
  padding: 1.5rem;
  margin: 0;
}

.skills {
  background: var(--color-intro);
}

.strengths {
  background: var(--color-accent-alt);
}

.certification {
  background: var(--color-tertiary);
  height: auto;
  width: auto;
  border-radius: 5px;
  margin: 2rem 2rem;
}

.certification p {
  color: var(--color-primary);
}

.certification h3 {
  color: var(--color-secondary);
}

.certification h4 {
  margin: 0;
}

.certification--title {
  color: var(--color-secondary);
  text-align: center;
}

.mosh-logo {
  height: 50px;
  width: 50px;
}

.coursera-logo {
  height: 14px;
  width: 100px;
}

.course {
  padding-top: 1rem;
}

.align-logo {
  text-align: center;
  padding: 2rem;
}

.clear {
  padding: 0;
}

/*FOOTER SECTION*/
/*-------------*/
#footer {
  background: var(--color-accent-alt);
  height: 300px;
  text-align: center;
}

.footer--title {
  padding-top: 50px;
  font-size: 5rem;
}

